# MarbleMarcher

./: .gitignore  .travis.yml  CMakeLists.txt  MarbleMarcher.rc  MarbleMarcher.vcxproj  MarbleMarcher.vcxproj.filters  Overlays.h  README.md  Res.h  Scene.cpp  Scene.h  Scores.h  SelectRes.cpp  build_on_windows.md  flake.nix  macOSBuild.sh  winMacOSBuild.sh
assets/: config.txt  frag.glsl  vert.glsl
game_folder/assets/: OFL.txt  config.txt  frag.glsl  vert.glsl
game_folder/levels/: Around_The_Citadel.lvl  Around_The_World.lvl  Asteroid_Extreme.lvl  Asteroid_Field.lvl  Beware_Of_Bumps.lvl  Build_Up_Speed.lvl  Building_Bridges.lvl  Bunny_Hops.lvl  Don't_Get_Crushed.lvl  Expressways.lvl  Fatal_Fissures.lvl  First_Kaizo.lvl  Hole_In_One.lvl  Jump_The_Crater.lvl  Lily_Pads.lvl  Mind_The_Gap.lvl  Mountain_Climbing.lvl  Planet_Crusher.lvl  Platform_Extreme.lvl  Pylon_Palace.lvl  Ride_The_Gecko.lvl  The_Catwalk.lvl  The_Crown_Jewels.lvl  The_Hills_Are_Alive.lvl  The_Sponge.lvl  Too_Many_Trees.lvl  Top_Of_The_Citadel.lvl  World_tree.lvl
game_folder/locals/: English.loc  German.loc  Japanese.loc  Polish.loc  Russian.loc  Ukrainian.loc
game_folder/screenshots/: readme.txt
game_folder/shaders/: frag.glsl
game_folder/shaders/compute/: Illumination_step.glsl  Illumination_step.glsl_error.txt  MAIN.cfg  MRRM1.glsl  MRRM1.glsl_error.txt  MRRM2.glsl  MRRM2.glsl_error.txt  MRRM3.glsl  MRRM3.glsl_error.txt  Shading_step.glsl  Shading_step.glsl_error.txt  camera.glsl  distance_estimators.glsl  main.glsl  main.glsl_error.txt  pipeline.cfg  ray_marching.glsl  shading.glsl  test.glsl
macOS/: MarbleMarcher.icns
macOS/template/Contents/: Info.plist
macOS/template/Contents/MacOS/: MarbleMarcher.sh
macOS/template/Contents/Resources/: sfml-audio  sfml-graphics  sfml-system  sfml-window
src/: CMakeLists.txt  Camera.cpp  Camera.h  ExprParser.cpp  ExprParser.h  Gamemodes.cpp  Gamemodes.h  Interface.cpp  Interface.h  Level.cpp  Level.h  LoadedResources.h  Localization.cpp  Localization.h  Main.cpp  Overlays.cpp  Overlays.h  Renderer.cpp  Renderer.h  Res.cpp  Res.h  Resource.aps  Resource.rc  Scene.cpp  Scene.h  Scores.cpp  Scores.h  SelectRes.cpp  SelectRes.h  Settings.h  Shaders.cpp  Shaders.h  fixthings.c  resource.h
