add_library(MarbleMarcherSources
  Level.cpp
  Level.h

  Overlays.cpp
  Overlays.h

  Res.h

  Scene.cpp
  Scene.h

  Scores.cpp
  Scores.h

  SelectRes.cpp
  SelectRes.h

  Interface.h
  Interface.cpp
  
  Localization.h
  Localization.cpp

  Settings.h

  Gamemodes.h
  Gamemodes.cpp
  
  Renderer.h
  Renderer.cpp
  
  Shaders.h
  Shaders.cpp
  
  Camera.h
  Camera.cpp
)
